--- a/sass/theme.css
+++ b/sass/theme.css
@@ -695,12 +695,73 @@ header .navbar #closeBtn {
 /*** TEMPLATE PHOTO_BLOCK ***/
 #photo-block {
   width: 50%;
+  position: relative;
 }
 #photo-block #photo-block__img {
   width: 100%;
   height: 495px;
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+#photo-block #photo-block-survol {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 495px;
+  background: rgba(0, 0, 0, 0.7);
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+#photo-block #photo-block-survol #photo_icon_fullscreen {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+#photo-block #photo-block-survol #photo_icon_fullscreen :hover {
+  cursor: pointer;
+  transform: scale(1.2);
+}
+#photo-block #photo-block-survol #photo_icon_fullscreen img {
+  width: 34px;
+  height: 34px;
+  transition: transform 0.3s ease;
+}
+#photo-block #photo-block-survol #photo_icon_eye {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+#photo-block #photo-block-survol #photo_icon_eye :hover {
+  cursor: pointer;
+  transform: scale(1.2);
+}
+#photo-block #photo-block-survol #photo_icon_eye .img_icon_eye {
+  width: 46px;
+  height: 31px;
+  transition: transform 0.3s ease;
+}
+#photo-block #photo-block-survol #photo-info__details {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 94%;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 20px;
+  text-align: center;
+}
+
+#photo-block:hover #photo-block-survol {
+  opacity: 1;
 }
 
 @media (max-width: 375px) {
