--- a/sass/theme.scss
+++ b/sass/theme.scss
@@ -765,11 +765,75 @@ header {
 /*** TEMPLATE PHOTO_BLOCK ***/
 #photo-block {
     width: 50%;
+    position: relative;
         #photo-block__img {
         width: 100%;
         height: 495px;
         object-fit: cover;
         }
+}
+
+#photo-block {
+    #photo-block-survol {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 495px;
+        background: rgba(0, 0, 0, 0.7);
+        color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        opacity: 0;
+        transition: opacity 0.3s ease;
+        #photo_icon_fullscreen {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            :hover {
+                cursor: pointer;
+                transform: scale(1.2);
+            }
+            img {
+                width: 34px;
+                height: 34px;
+                transition: transform 0.3s ease;
+            }
+        }
+        #photo_icon_eye {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            :hover {
+                cursor: pointer;
+                transform: scale(1.2);
+            }
+            .img_icon_eye {
+                width: 46px;
+                height: 31px;
+                transition: transform 0.3s ease;
+            }
+        }
+        
+        #photo-info__details {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 94%;
+            color: white;
+            display: flex;
+            justify-content: space-between;
+            padding: 10px 20px;
+            text-align: center;
+        }
+    }
+}
+
+#photo-block:hover #photo-block-survol {
+    opacity: 1;
 }
 
 @media (max-width: 375px) {
