--- a/sass/theme.css
+++ b/sass/theme.css
@@ -26,6 +26,10 @@
 body {
   width: 100%;
   height: auto;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 #wpadminbar {
@@ -205,7 +209,7 @@ header .navbar #closeBtn {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   height: 40px;
   border-top: 1px black solid;
 }
@@ -261,7 +265,7 @@ header .navbar #closeBtn {
 /*** BANNER ***/
 .banner {
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 962px;
   overflow: hidden;
 }
@@ -711,7 +715,7 @@ header .navbar #closeBtn {
   left: 0;
   width: 100%;
   height: 495px;
-  background: rgba(0, 0, 0, 0.7);
+  background: rgba(0, 0, 0, 0.6);
   color: white;
   display: flex;
   justify-content: center;
@@ -757,8 +761,23 @@ header .navbar #closeBtn {
   color: white;
   display: flex;
   justify-content: space-between;
-  padding: 10px 20px;
+  padding: 0px 20px 0px 20px;
   text-align: center;
+}
+#photo-block #photo-block-survol #photo-info__details .photo_block_reference {
+  font-family: "Poppins";
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 21px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+}
+#photo-block #photo-block-survol #photo-info__details .photo_block_categorie {
+  font-size: 14px;
+  line-height: 21px;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  color: #FFFFFF;
 }
 
 #photo-block:hover #photo-block-survol {
