--- a/sass/theme.scss
+++ b/sass/theme.scss
@@ -43,6 +43,10 @@ $ddd : #E5E5E5;
 body {
     width: 100%;
     height: auto;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 #wpadminbar {
@@ -258,7 +262,7 @@ header {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    width: 100vw;
+    width: 100%;
     height: 40px;
     border-top: 1px black solid;
 }
@@ -318,7 +322,7 @@ header {
 /*** BANNER ***/
 .banner {
     position: relative;
-    width: 100vw;
+    width: 100%;
     height: 962px;
     overflow: hidden;
     .background_img {
@@ -784,7 +788,7 @@ header {
         left: 0;
         width: 100%;
         height: 495px;
-        background: rgba(0, 0, 0, 0.7);
+        background: rgba(0, 0, 0, 0.6);
         color: white;
         display: flex;
         justify-content: center;
@@ -830,8 +834,23 @@ header {
             color: white;
             display: flex;
             justify-content: space-between;
-            padding: 10px 20px;
+            padding: 0px 20px 0px 20px;
             text-align: center;
+            .photo_block_reference {
+                font-family: 'Poppins';
+                font-weight: 500;
+                font-size: 14px;
+                line-height: 21px;
+                text-transform: uppercase;
+                color: #FFFFFF;
+            }
+            .photo_block_categorie {
+                font-size: 14px;
+                line-height: 21px;
+                letter-spacing: 0.1em;
+                text-transform: uppercase;
+                color: #FFFFFF;
+            }
         }
     }
 }
