--- a/sass/theme.css
+++ b/sass/theme.css
@@ -2,19 +2,19 @@
 @font-face {
   font-family: "Space Mono BoldItalic";
   src: url("../assets/fonts/space_mono/SpaceMono-BoldItalic.woff2") format("woff2");
-  font-style: bolditalic;
+  font-style: italic;
   font-weight: 700;
 }
 @font-face {
   font-family: "Space Mono";
   src: url("../assets/fonts/space_mono/SpaceMono-Regular.woff2") format("woff2");
-  font-style: regular;
+  font-style: normal;
   font-weight: 400;
 }
 @font-face {
   font-family: "Poppins";
   src: url("../assets/fonts/poppins/Poppins-Light.woff2") format("woff2");
-  font-style: light;
+  font-style: normal;
   font-weight: 300;
 }
 /*** VARIABLES COULEURS ***/
@@ -59,27 +59,24 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  box-sizing: border-box;
   background-color: #FFFFFF;
   position: fixed;
   left: 0;
-  top: 30px;
+  top: 0;
   z-index: 9000;
+}
+header .navbar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 1250px;
+  margin: 0 2% 0 2%;
 }
 
 #header_site_menu {
   box-shadow: 0px 10px 16px 0px rgba(0, 0, 0, 0.1);
-}
-
-.navbar {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  max-width: 1250px;
-  height: 80px;
-  justify-content: space-between;
-  align-items: center;
-  margin: 0 2% 0 2%;
 }
 
 .logo img {
@@ -189,24 +186,17 @@ header {
   }
   #header_menu {
     display: none;
+    top: -100vh;
   }
   #header_menu.active {
     display: block;
+    transition: top 0.8s ease;
   }
-  #closeBtn {
-    display: none;
-  }
-  #header_menu.active ~ #closeBtn {
-    display: block;
-  }
-  #header_menu.active ~ #openBtn {
-    display: none;
-  }
-  #menu-header {
+  #header_menu.active #menu-header {
     display: flex;
     position: fixed;
     z-index: 9999;
-    top: 60px;
+    top: 35px;
     width: 100%;
     height: 90vh;
     left: 0;
@@ -216,8 +206,17 @@ header {
     background-color: #E00000;
     font-size: 44px;
   }
-  #menu-header > li > a {
+  #header_menu.active #menu-header > li > a {
     color: white;
+  }
+  #closeBtn {
+    display: none;
+  }
+  #header_menu.active ~ #closeBtn {
+    display: block;
+  }
+  #header_menu.active ~ #openBtn {
+    display: none;
   }
 }
 /*** FOOTER ***/
