--- a/sass/theme.css
+++ b/sass/theme.css
@@ -84,7 +84,7 @@ header .navbar {
   height: 14px;
 }
 
-#header_menu {
+.header_menu {
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -181,42 +181,60 @@ header .navbar {
     width: 138px;
     height: 9px;
   }
-  #openBtn {
-    display: block;
-  }
-  #header_menu {
-    display: none;
-    top: -100vh;
-  }
-  #header_menu.active {
-    display: block;
-    transition: top 0.8s ease;
-  }
-  #header_menu.active #menu-header {
+  .header_menu {
     display: flex;
+    justify-content: center;
+    align-items: center;
     position: fixed;
-    z-index: 9999;
-    top: 35px;
+    top: 80px;
+    right: -375px;
+    height: 100vh;
     width: 100%;
-    height: 90vh;
-    left: 0;
+    background-color: #E00000;
+    overflow: hidden;
+    transition: right 0.4s ease, opacity 0.4s ease !important;
+    opacity: 0;
+    z-index: 9999;
+  }
+  .header_menu.active {
+    right: 0;
+    opacity: 1;
+  }
+  #menu-header {
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #E00000;
-    font-size: 44px;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    height: 100%;
   }
-  #header_menu.active #menu-header > li > a {
+  #menu-header li {
+    padding: 20px 0;
+  }
+  #menu-header li a {
     color: white;
+    text-decoration: none;
+    font-size: 18px;
+    transition: transform 0.3s ease;
+  }
+  #menu-header li a:hover {
+    transform: scale(1.1);
+  }
+  #openBtn, #closeBtn {
+    position: absolute;
+    z-index: 9999;
+    cursor: pointer;
   }
   #closeBtn {
     display: none;
   }
-  #header_menu.active ~ #closeBtn {
-    display: block;
-  }
-  #header_menu.active ~ #openBtn {
+  .header_menu.active #openBtn {
     display: none;
+  }
+  .header_menu.active #closeBtn {
+    display: block;
   }
 }
 /*** FOOTER ***/
